# BeBOT_cpp

./: CMakeLists.txt  CMakePresets.json  README.md  test_bebot  test_cast.cpp  u.csv  u_controlpoints.csv  x.csv  x1.csv  x1_controlpoints.csv  x_controlpoints.csv
Ipopt_ma27_solver/: Makefile  config.status
Ipopt_ma27_solver/contrib/sIPOPT/: Makefile
Ipopt_ma27_solver/doc/: Doxyfile
Ipopt_ma27_solver/examples/Cpp_example/: Makefile
Ipopt_ma27_solver/examples/ScalableProblems/: Makefile
Ipopt_ma27_solver/examples/hs071_c/: Makefile
Ipopt_ma27_solver/examples/hs071_cpp/: Makefile
Ipopt_ma27_solver/examples/hs071_f/: Makefile
Ipopt_ma27_solver/examples/recursive_nlp/: Makefile
Ipopt_ma27_solver/src/: Makefile  ipopt.pc  libipopt.la
Ipopt_ma27_solver/src/.libs/: libipopt.lai  libipopt.so.3.14.13
Ipopt_ma27_solver/src/Algorithm/: IpEquilibrationScaling.lo  IpLimMemQuasiNewtonUpdater.lo  IpLoqoMuOracle.lo  IpPenaltyLSAcceptor.lo  IpQualityFunctionMuOracle.lo
Ipopt_ma27_solver/src/Common/: IpObserver.lo
Ipopt_ma27_solver/src/Interfaces/: IpDiagMatrix.lo  IpVector.lo
Ipopt_ma27_solver/src/LinAlg/: IpCompoundSymMatrix.lo  IpLowRankUpdateSymMatrix.lo
Ipopt_ma27_solver/test/: Makefile
Ipopt_ma57_solver/: Makefile  config.status
Ipopt_ma57_solver/contrib/sIPOPT/: Makefile
Ipopt_ma57_solver/doc/: Doxyfile
Ipopt_ma57_solver/examples/Cpp_example/: Makefile
Ipopt_ma57_solver/examples/ScalableProblems/: Makefile
Ipopt_ma57_solver/examples/hs071_c/: Makefile
Ipopt_ma57_solver/examples/hs071_cpp/: Makefile
Ipopt_ma57_solver/examples/hs071_f/: Makefile  hs071_f.f
Ipopt_ma57_solver/examples/recursive_nlp/: Makefile
Ipopt_ma57_solver/src/: Makefile  ipopt.pc  libipopt.la
Ipopt_ma57_solver/src/.libs/: libipopt.lai  libipopt.so.3  libipopt.so.3.14.13
Ipopt_ma57_solver/src/Algorithm/: IpAlgBuilder.lo  IpAlgorithmRegOp.lo  IpIpoptAlg.lo  IpIpoptData.lo  IpLeastSquareMults.lo  IpLowRankAugSystemSolver.lo  IpLowRankSSAugSystemSolver.lo  IpNLPBoundsRemover.lo  IpOrigIpoptNLP.lo  IpRestoConvCheck.lo  IpRestoFilterConvCheck.lo  IpRestoIterateInitializer.lo  IpWarmStartIterateInitializer.lo
Ipopt_ma57_solver/src/Common/: IpJournalist.lo  IpRegOptions.lo  config.h
Ipopt_ma57_solver/src/Interfaces/: IpInterfacesRegOp.lo  IpStdFInterface.lo  IpStdInterfaceTNLP.lo  IpTNLPAdapter.lo  config.h  farmer_problem.cpp
Ipopt_ma57_solver/src/LinAlg/: IpCompoundMatrix.lo  IpDenseSymMatrix.lo  IpDenseVector.lo  IpMatrix.lo  IpSumMatrix.lo  IpSumSymMatrix.lo  IpSymScaledMatrix.lo
Ipopt_ma57_solver/test/: Makefile  run_unitTests
Ipopt_pardiso/: .config.log.swp  Makefile  config.status  libtool
Ipopt_pardiso/contrib/sIPOPT/: Makefile
Ipopt_pardiso/doc/: Doxyfile
Ipopt_pardiso/examples/Cpp_example/: Makefile
Ipopt_pardiso/examples/ScalableProblems/: Makefile
Ipopt_pardiso/examples/hs071_c/: Makefile
Ipopt_pardiso/examples/hs071_cpp/: Makefile
Ipopt_pardiso/examples/hs071_f/: Makefile
Ipopt_pardiso/examples/recursive_nlp/: Makefile
Ipopt_pardiso/src/: Makefile  ipopt.pc  libipopt.la
Ipopt_pardiso/src/.libs/: libipopt.lai  libipopt.so.3.14.13
Ipopt_pardiso/src/Algorithm/: IpAdaptiveMuUpdate.lo  IpDefaultIterateInitializer.lo  IpFilterLSAcceptor.lo  IpGradientScaling.lo  IpMonotoneMuUpdate.lo  IpPDFullSpaceSolver.lo  IpProbingMuOracle.lo  IpRestoPenaltyConvCheck.lo  IpTimingStatistics.lo
Ipopt_pardiso/src/Common/: IpTaggedObject.lo  config.h
Ipopt_pardiso/src/Interfaces/: IpIpoptApplication.lo  IpSolveStatistics.lo  IpStdCInterface.lo
Ipopt_pardiso/src/LinAlg/: IpBlas.lo  IpLapack.lo  IpTransposeMatrix.lo  IpZeroSymMatrix.lo
Ipopt_pardiso/test/: Makefile
Ipopt_spral_solver/: Makefile  config.status  libtool
Ipopt_spral_solver/contrib/sIPOPT/: Makefile
Ipopt_spral_solver/doc/: Doxyfile
Ipopt_spral_solver/examples/Cpp_example/: Makefile
Ipopt_spral_solver/examples/ScalableProblems/: Makefile
Ipopt_spral_solver/examples/hs071_c/: Makefile
Ipopt_spral_solver/examples/hs071_cpp/: Makefile
Ipopt_spral_solver/examples/hs071_f/: Makefile
Ipopt_spral_solver/examples/recursive_nlp/: Makefile
Ipopt_spral_solver/src/: Makefile  ipopt.pc  libipopt.la
Ipopt_spral_solver/src/.libs/: libipopt.lai  libipopt.so.3  libipopt.so.3.14.14
Ipopt_spral_solver/src/Algorithm/: IpAugRestoSystemSolver.lo  IpBacktrackingLineSearch.lo  IpExactHessianUpdater.lo  IpFilter.lo  IpGenAugSystemSolver.lo  IpIpoptCalculatedQuantities.lo  IpIteratesVector.lo  IpNLPScaling.lo  IpOptErrorConvCheck.lo  IpOrigIterationOutput.lo  IpPDPerturbationHandler.lo  IpPDSearchDirCalc.lo  IpRestoIpoptNLP.lo  IpRestoIterationOutput.lo  IpRestoMinC_1Nrm.lo  IpRestoRestoPhase.lo  IpStdAugSystemSolver.lo  IpUserScaling.lo
Ipopt_spral_solver/src/Common/: IpDebug.lo  IpLibraryLoader.lo  IpOptionsList.lo  IpUtils.lo  config.h  config_ipopt.h
Ipopt_spral_solver/src/Interfaces/: IpTNLP.lo  IpTNLPReducer.lo
Ipopt_spral_solver/src/LinAlg/: IpCompoundVector.lo  IpDenseGenMatrix.lo  IpExpandedMultiVectorMatrix.lo  IpExpansionMatrix.lo  IpIdentityMatrix.lo  IpMultiVectorMatrix.lo  IpScaledMatrix.lo  (+1 more)
Ipopt_spral_solver/test/: Makefile
bebot/: bebot.cpp  bernsteindifferentialmatrix.cpp  bernsteinmatrix_a2b.cpp  bernsteinpoly.cpp  bernsteinproduct.cpp  degelevmatrix.cpp  degreducmatrix.cpp  knots.cpp  lagrangepoly.cpp  nchoosek_mod.cpp  piecewisebebot.cpp  piecewiseintegrationmatrix.cpp
include/: bebot.h  bernstein_estimator.h  bernstein_probability.h  bernsteindifferentialmatrix.h  bernsteinintegrationmatrix.h  bernsteinmatrix_a2b.h  bernsteinpoly.h  bernsteinproduct.h  deCasteljau.h  deCastiljau.h  degelevmatrix.h  degreducmatrix.h  knots.h  lagrangepoly.h  lgl_ps.h  nchoosek_mod.h  piecewisebebot.h  piecewisebernsteinpoly.h  piecewisebernsteinproduct.h  piecewiseintegrationmatrix.h
src/: bernstein_estimator.cpp  bernstein_probability.cpp  bernsteindifferentialmatrix.cpp  bernsteinintegrationmatrix.cpp  bernsteinpoly.cpp  deCasteljau.cpp  deCastiljau.cpp  degelevmatrix.cpp  lgl_ps.cpp  piecewisebebot.cpp  piecewisebernsteinpoly.cpp  piecewisebernsteinproduct.cpp
(+446 files in other folders)
